# elastic-query-builder

./: Cargo.toml  README.md
src/: lib.rs  util.rs
src/aggregation/: cardinality_aggregation.rs  filter_aggregation.rs  max_aggregation.rs  min_aggregation.rs  mod.rs  multi_terms_aggregation.rs  nested_aggregation.rs  reverse_nested_aggregation.rs  stats_aggregation.rs  sum_aggregation.rs  terms_aggregation.rs  top_hits_aggregation.rs  value_count_aggregation.rs
src/mapping/: mod.rs  properties.rs
src/mapping/field_type/: binary.rs  boolean.rs  date.rs  geo_point.rs  keyword.rs  mod.rs  nested.rs  numeric.rs  object.rs  text.rs
src/query/: bool_query.rs  exists_query.rs  geo_distance_query.rs  match_all_query.rs  match_query.rs  mod.rs  multi_match_query.rs  nested.rs  range_query.rs  script_query.rs  script_score_query.rs  term_query.rs  terms_query.rs  wildcard_query.rs
tests/: integration_test.rs
