[package]
name = "elastic-query-builder"
version = "0.1.27"
edition = "2021"
authors = ["uiuifree"]
description = "ElasticSearch Query Builder"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
repository="https://github.com/uiuifree/elastic-query-builder"

[dependencies]
serde = "~1"
serde_json = "~1"
serde_derive = "~1"
